ref(#23) Implement plugin mechanism
Fixes #23

--- a/src/stylesheets/default.css
+++ b/src/stylesheets/default.css
@@ -1,13 +1,13 @@
-.metro-designer {
+.root {
   display: flex;
   align-items: flex-start;
   align-content: flex-start;
 }
-.designer-panel {
+.panel-north {
   flex: 1 1 100%;
   overflow: hidden;
 }
-.developer-panel {
+.panel-east {
   flex: 1 0 450px;
   background: rgba(0, 0, 0, .05);
   padding: 0 10px;
